--- a/sinio/cadastramento.html
+++ b/sinio/cadastramento.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +12,19 @@
         <div class="box_cad">
             <div class="logo"><img src="assets/Sinio.svg" alt="Sinio"></div>
             <div class="dados_pessoais">
-                <div class="input_nome"><input type="text" id="nome"></div>
-                <div class="input_email"><input type="email" name="email" id=""></div>
-                <div class="input_telefone"><input type="number" name="telefone" id=""></div>
+                <p>Dados Pessoais</p>
+                <div class="input_nome"><input type="text" id="nome" placeholder="Nome"></div>
+                <div class="input_email"><input type="email" name="email" placeholder="Email"></div>
+                <div class="input_telefone"><input type="number" name="telefone" id="" placeholder="Telefone"></div>
             </div>
             <div class="dados_veiculo">
-                <div class="input_placa"><input type="text" name="placa_car"></div>
-                <div class="input_marca"><input type="text" name="marca_car"></div>
-                <div class="input_modelo"><input type="text" name="modelo_car"></div>
-                <div class="input_ano"><input type="number" name="ano_car"></div>
-                <div class="input_km"><input type="number" name="km_car"></div>
+                <p>Dados do Veículo</p>
+                <div class="input_placa"><input type="text" name="placa_car" placeholder="Placa do Veículo"></div>
+                <div class="input_marca"><input type="text" name="marca_car" placeholder="Marca do Veículo"></div>
+                <div class="input_modelo"><input type="text" name="modelo_car" placeholder="Modelo do Veículo"></div>
+                <div class="input_ano"><input type="number" name="ano_car" placeholder="Ano do Veículo"></div>
+                <div class="input_km"><input type="number" name="km_car" placeholder="Km do Veículo"></div>
+                div.
             </div>
             <div class="btn_recebe_info"></div>
             <div class="btn_enviar"></div>
